# issue-sentinel

./: .gitignore  CONTRIBUTING.md  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: index.html
examples/: config.yaml  demo.py  workflow-issue-triage.yml
src/issue_sentinel/: __init__.py  classifier.py  cli.py  config.py  github_client.py  llm_classifier.py  sentiment.py  sentinel.py  urgency.py
tests/: test_core.py
